# sft_test_task

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
apps/contract/admin/: __init__.py  contract.py
apps/contract/management/commands/: clear_db.py  generate_db.py
apps/contract/migrations/: 0001_initial.py
apps/contract/models/: __init__.py  contract.py
apps/credit/: urls.py
apps/credit/admin/: __init__.py  credit.py
apps/credit/migrations/: 0001_initial.py
apps/credit/models/: __init__.py  credit.py
apps/credit/serializers/: credit.py
apps/credit/views/: credit.py
apps/manufacturer/: apps.py  urls.py
apps/manufacturer/admin/: __init__.py  manufacturer.py
apps/manufacturer/migrations/: 0001_initial.py
apps/manufacturer/models/: __init__.py  manufacturer.py
apps/product/admin/: __init__.py  product.py
apps/product/migrations/: 0001_initial.py
apps/product/models/: product.py
core/: settings.py  urls.py
core/mixins/: models.py
docker/: Dockerfile  compose.dev.yml  compose.yml
