[tool.poetry]
name = "sft-test-task"
version = "0.1.0"
description = ""
authors = ["vitaly <vitalikstain@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
djangorestframework = "^3.15.2"
django-environ = "^0.11.2"
drf-spectacular = "^0.27.2"
psycopg2-binary = "^2.9.9"
drf-standardized-errors = "^0.14.1"
faker = "^27.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
